# morpheme_funcs

./: .dockerignore  Cargo.toml  morpheme_funcs.control  readme.md
.devcontainer/: Dockerfile
docker/: Dockerfile  docker-compose.yml  init-morpheme.sh  init.sql
docker/sql/inserts/: buturyuhokan.sql  cutting_tool_product.sql  hardware_materials_product.sql  kojisyomei.sql  konpouyouhin.sql  measuring_tool_product.sql  pneumatic_product.sql  power_tools_product.sql
research/: calcByPgrx.plan  calcByPgrx.sql  calcByPgrxIndex.plan  calcBySqlWithMorAry.sql  calcBySqlWithOriginalWord.plan  calcBySqlWithOriginalWord.sql  calcBySqlWithOriginalWordIndex.plan  calcExtensionOrder.plan  calcExtensionOrder.sql  calcPureSqlOrder.plan  calcPureSqlOrder.sql  extension.plan  extension.sql  plansql.tar  pureQuery.plan  pureQuery.sql  pureQueryUsingMorColumn.plan  pureQueryUsingMorColumn.sql  readme.md
sql/: apply_sqls.rs  apply_sqls.sh  init.sql  update_morpheme_array.sql
sql/inserts/: anzenyouhin.sql  chemical_product.sql  electronic_product.sql  hansoukiki.sql  machine_tool_product.sql  mechatronics_product.sql  niyakuyouhin.sql  seisoeisei.sql
src/: lib.rs  mecab_util.rs
