[package]
name = "morpheme_funcs"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_morpheme_funcs"
path = "./src/bin/pgrx_embed.rs"

[[bin]]
name = "apply_sqls"
path = "./sql/apply_sqls.rs"


[features]
default = ["pg13"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = "=0.12.9"
mecab = "=0.1.6"
rayon = "=1.8"
rustc-hash = "1.1.0"

[dev-dependencies]
pgrx-tests = "=0.12.9"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
